<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/backgroundmenu3"
    tools:context=".DiaryFragment">

    <EditText
        android:id="@+id/input_emotionsEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/title"
        android:textColor="@color/black"
        android:inputType="text"
        android:textSize="20sp"
        android:padding="10dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/edittext_background"/>

    <EditText
        android:id="@+id/contentEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:autofillHints=""
        android:hint="@string/content"
        android:inputType="textMultiLine"
        android:minLines="5"
        android:textSize="18sp"
        android:padding="10dp"
        android:background="@drawable/edittext_background"
        android:gravity="top"/>

    <Button
        android:id="@+id/diaryNextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:background="@drawable/button_background"/>

</LinearLayout>
